fixing gap at blogs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,15 @@ svg {
   transform: scale(1);
   transition: transform 400ms 350ms; }
 
+.pretend-container {
+  position: relative;
+  min-height: calc(100vh - 51.9833px);
+  padding-top: calc(60.95px + 2.5rem);
+  /* 37.5 == 600px / 16px = 37.5 */ }
+  @media only screen and (min-width: 64em) {
+    .pretend-container {
+      padding-top: 6rem; } }
+
 .section__footer-min {
   position: absolute;
   bottom: 0;
@@ -264,7 +273,7 @@ svg {
   text-align: center;
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 35%;
+  top: 50%;
   left: 50%; }
 
 .hamburger-menu-link {
@@ -532,10 +541,6 @@ URUTAN Menambah media query: base + typography -> layout & grid -> page layout -
 .about__img-banner {
   width: 100%; }
 
-.pretend-container {
-  position: relative;
-  min-height: calc(100vh - 5.19833rem); }
-
 /*
 VALUE PARAMETER:                ABAIKAN INI SLUR!!!
 -   phone
@@ -556,7 +561,7 @@ URUTAN Menambah media query: base + typography -> layout & grid -> page layout -
   /* 37.5 == 600px / 16px = 37.5 */ }
   @media only screen and (min-width: 64em) {
     .section__blogs {
-      height: calc(100vh - 56px - 40px); } }
+      height: calc(100vh - 55.9833px - 40px); } }
 
 .blogs__main-content {
   /* 37.5 == 600px / 16px = 37.5 */ }
@@ -633,11 +638,6 @@ URUTAN Menambah media query: base + typography -> layout & grid -> page layout -
     .blogs__circle--md {
       top: 10%;
       left: 97%; } }
-
-.pretend-container {
-  position: relative;
-  min-height: calc(100vh - 51.9833px);
-  padding-top: calc(60.95px + 2.5rem); }
 
 /* 
 *
