--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -113,7 +113,7 @@
   text-align: center;
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 35%;
+  top: 50%;
   left: 50%;
 }
 
